your message for this commit

--- a/contact.html
+++ b/contact.html
@@ -113,13 +113,14 @@
                     </div>
 
                     <div class="form-contant">
-                        <input type="text" placeholder="Name">
-
-                        <input type="email" placeholder="Email"> <br>
-
+                        <div class="first-input d-flex">
+                            <input type="text" placeholder="Name" class="name">
+                            <input type="email" placeholder="Email">
+                        </div>
+                        <br>
                         <input class="subject" type="text" placeholder="Subject"> <br>
-
-                        <textarea name="text" id="massege" cols="75" rows="8" placeholder="Massege"></textarea><br>
+                        <br>
+                        <input type="text-area" placeholder="Message" id="massege"><br>
 
                         <a href="#">Send Message</a>
                     </div>
