--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                                     href="tel:702.960.7754">702.960.7754</a></li>
 
                             <li> <i class="fa-solid fa-globe"></i><span> Website:</span> <a
-                                    href="home.html">www.silverhawk.com</a></li>
+                                    href="index.html">www.silverhawk.com</a></li>
                         </ul>
                     </div>
                 </div>
